# OpenAutoLink

./: .gitattributes  .gitignore  .gitmodules  README.md  gradle.properties  privacy-policy.html  settings.gradle.kts
.github/: copilot-instructions.md
.github/instructions/: aa-developer-mode.instructions.md  app-kotlin.instructions.md  audio-pipeline.instructions.md  bridge-cpp.instructions.md  bridge-dev-workflow.instructions.md  emulator-ui-testing.instructions.md  release-bundle.instructions.md  ui-requirements.instructions.md  video-pipeline.instructions.md
.github/prompts/: bootstrap-memory.prompt.md
.github/workflows/: build-companion.yml  ci.yml  release-apk.yml  release-bridge.yml
app/: README.md  build.gradle.kts  proguard-rules.pro
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  aa_session.cpp  aasdk_jni.cpp  jni_bridge.cpp  jni_channel_handlers.cpp  jni_channel_handlers.h  jni_log_bridge.h  jni_service_catalog.cpp  jni_session.cpp  jni_session.h  jni_transport.cpp  jni_transport.h
app/src/main/cpp/cmake/: FindBoost.cmake  FindOpenSSL.cmake  Findlibusb-1.0.cmake
app/src/main/cpp/stubs/: libusb.h  libusb_stub.c
app/src/main/java/com/openautolink/app/: MainActivity.kt  OalApplication.kt
app/src/main/java/com/openautolink/app/audio/: AudioPlayerImpl.kt  AudioPurposeCoordinator.kt  AudioPurposeSlot.kt
app/src/main/java/com/openautolink/app/cluster/: ClusterMainSession.kt  ClusterManager.kt  ClusterNavigationState.kt  OalClusterSession.kt
app/src/main/java/com/openautolink/app/data/: AppPreferences.kt
app/src/main/java/com/openautolink/app/diagnostics/: DiagnosticLog.kt  FileLogWriter.kt  LogcatCapture.kt  RemoteDiagnostics.kt  SettingsReceiver.kt  TelemetryCollector.kt
app/src/main/java/com/openautolink/app/input/: ImuForwarder.kt  SteeringWheelController.kt  TouchForwarderImpl.kt  VehicleDataForwarder.kt  VehicleDataForwarderImpl.kt
app/src/main/java/com/openautolink/app/media/: OalMediaSessionManager.kt
app/src/main/java/com/openautolink/app/navigation/: DistanceFormatter.kt  NavigationDisplayImpl.kt
app/src/main/java/com/openautolink/app/session/: SessionManager.kt
app/src/main/java/com/openautolink/app/transport/: AasdkJni.kt  BridgeUpdateManager.kt  ConnectionManager.kt  ControlMessage.kt  ControlMessageSerializer.kt  DirectAaTransport.kt  NetworkInterfaceScanner.kt  TcpAudioChannel.kt  TcpControlChannel.kt  TcpVideoChannel.kt
app/src/main/java/com/openautolink/app/video/: CodecSelector.kt  MediaCodecDecoder.kt  VideoDecoder.kt  VideoFrame.kt
app/src/main/proto/oal/: common.proto  control.proto  input.proto  media.proto  navigation.proto  playback.proto  sensors.proto  vehicle_energy_model.proto  wireless.proto
bridge/: README.md
bridge/openautolink/: README.md
bridge/openautolink/headless/: CMakeLists.txt  CMakeLists_headless_tcp.txt  CMakeLists_ocd_test.txt  README.md  headless_tcp_server.cpp  ocd_headless_test.cpp
bridge/openautolink/headless/avahi/: carplay.service  openautolink.service
bridge/openautolink/headless/include/openautolink/: aasdk_control.hpp  carplay_airplay.hpp  carplay_bonjour.hpp  carplay_crypto.hpp  carplay_rtsp.hpp  carplay_session.hpp  contract.hpp  cpc200.hpp  cpc_session.hpp  engine.hpp  headless_config.hpp  i_car_transport.hpp  live_session.hpp  oal_mock_session.hpp  oal_session.hpp  service_catalog.hpp  session.hpp  tcp_car_transport.hpp
bridge/openautolink/headless/patches/: empty_fill_features.py  fix_headless_api.py  fix_live_session_v16.py  fix_ocd_test.py  fix_ocd_test2.py  patch_channel_ids.py  patch_v16_response.py  patch_v16_services.py
bridge/openautolink/headless/src/: aasdk_control.cpp  bt_auth_stub.cpp  carplay_airplay.cpp  carplay_bonjour.cpp  carplay_crypto.cpp  carplay_rtsp.cpp  carplay_session.cpp  contract.cpp  cpc_session.cpp  engine.cpp  live_session.cpp  main.cpp  oal_session.cpp  sco_audio.cpp  service_catalog.cpp  session.cpp
bridge/openautolink/relay/: CMakeLists.txt
bridge/openautolink/relay/src/: main.cpp
bridge/openautolink/scripts/: aa_bt_all.py  build-headless.sh
bridge/sbc/: BUILD.md  install.sh  openautolink-bt.service  openautolink-car-net.service  openautolink-eth-ssh.service  openautolink-network.service  openautolink-wireless.service  openautolink.env  openautolink.service  run-openautolink.sh  setup-car-net.sh  setup-eth-ssh.sh  setup-network.sh  start-wireless.sh
build-relay-arm64/: openautolink-relay  openautolink-relay-stripped
companion/: build.gradle.kts
companion/src/main/: AndroidManifest.xml
companion/src/main/java/com/openautolink/companion/: MainActivity.kt
docs/: aa-undocumented-features.md  architecture.md  custom-viewport.md  direct-aa-plan.md  direct-mode-plan.md  embedded-knowledge.md  ev-energy-model-reverse-engineering.md  headunit-revived-feature-comparison.md  networking.md  privacy-policy.md  protocol.md  testing.md  video-quality-investigation.md  work-plan.md
docs/future/: carplay-bridge-implementation.md
docs/reference/: android_auto_video_negotiation.md
docs/reference/gminfo/: README.md  debloat_vs_factory_analysis.md  third_party_access.md
docs/reference/gminfo/audio/: README.md  audio_subsystem.md
docs/reference/gminfo/codecs/: media_codecs.md
docs/reference/gminfo/platform/: boot_chain.md  firmware_versions.md  hardware.md  networking.md  security.md
docs/reference/gminfo/projection/: README.md  carplay_vs_android_auto.md  cluster_navigation.md  cpc200_integration.md
docs/reference/gminfo/runtime/: README.md  boot_timing.md  known_issues.md  memory_pressure.md
docs/reference/gminfo/video/: README.md  carplay_video_pipeline.md  display_subsystem.md  hardware_rendering.md
docs/screenshots/: README.md
gradle/: libs.versions.toml
scripts/: build-aasdk-android.sh  build-android.ps1  build-bridge-wsl.sh  build-openssl-android.sh  bundle-release-interactive.ps1  create-upload-keystore.ps1  deploy-bridge.ps1  monitor-aasdk-build.sh  setup-ndk-deps.sh
scripts/android/: build-bundle-interactive.ps1  build-gradle.ps1  create-keystore.ps1  invoke-build.ps1
(+31 files in other folders)
